[tool.poetry]
name = "web2preview"
version = "1.1.1"
description = "Extracts OpenGraph, TwitterCard and Schema properties from a webpage."
authors = ["vduseev <vagiz@duseev.com>"]
maintainers = ["vduseev <vagiz@duseev.com>"]
license = "MIT"
keywords = ["preview", "webpage", "opengraph", "twittercard", "schema"]
readme = "README.md"
homepage = "https://github.com/vduseev/web2preview"
repository = "https://github.com/vduseev/web2preview"
documentation = "https://github.com/vduseev/web2preview"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
tox = "^3.25.0"
ipython = "^8.3.0"
pytest-cov = "^3.0.0"
mypy = "^0.950"
flake8 = "^4.0.1"
pytest-flake8 = "^1.1.1"
pytest-black = "^0.3.12"
flake8-import-order = "^0.18.1"
pytest-mypy = "^0.9.1"
bump2version = "^1.0.1"

[tool.poetry.scripts]
web2preview = "web2preview.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
